force-app/main/default/objects/Contact/fields/ContactStatus__c.field-meta.xml
<CustomField>
    <fullName>ContactStatus__c</fullName>
    <defaultValue>&apos;Normal&apos;</defaultValue>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Defaulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>