force-app/main/default/objects/Contact/fields/CPFTest__c.field-meta.xml
<CustomField>
    <fullName>CPFTest__c</fullName>
    <formula>IF( OR(ISNULL(CPF__c), ISBLANK(CPF__c)), 
    false,
    IF( LEN(CPF__c) != 11, 
        false,
        AND( 
            (IF
                (OR(11 - MOD((
                    VALUE( MID(CPF__c, 1, 1) ) * 10 +
                    VALUE( MID(CPF__c, 2, 1) ) * 9 +
                    VALUE( MID(CPF__c, 3, 1) ) * 8 +
                    VALUE( MID(CPF__c, 4, 1) ) * 7 +
                    VALUE( MID(CPF__c, 5, 1) ) * 6 +
                    VALUE( MID(CPF__c, 6, 1) ) * 5 +
                    VALUE( MID(CPF__c, 7, 1) ) * 4 +
                    VALUE( MID(CPF__c, 8, 1) ) * 3 +
                    VALUE( MID(CPF__c, 9, 1) ) * 2
                    ), 11) == VALUE( MID(CPF__c, 10, 1)), 
                    AND(
                        MOD((
                            VALUE( MID(CPF__c, 1, 1) ) * 10 +
                            VALUE( MID(CPF__c, 2, 1) ) * 9 +
                            VALUE( MID(CPF__c, 3, 1) ) * 8 +
                            VALUE( MID(CPF__c, 4, 1) ) * 7 +
                            VALUE( MID(CPF__c, 5, 1) ) * 6 +
                            VALUE( MID(CPF__c, 6, 1) ) * 5 +
                            VALUE( MID(CPF__c, 7, 1) ) * 4 +
                            VALUE( MID(CPF__c, 8, 1) ) * 3 +
                            VALUE( MID(CPF__c, 9, 1) )* 2
                        ), 11) &lt; 2, 
                        VALUE(MID(CPF__c, 10, 1)) == 0
                    )
                ), 
                true, 
                false)
            ),
            (IF
                (OR(11 - MOD((
                    VALUE( MID(CPF__c, 1, 1) ) * 11 +
                    VALUE( MID(CPF__c, 2, 1) ) * 10 +
                    VALUE( MID(CPF__c, 3, 1) ) * 9 +
                    VALUE( MID(CPF__c, 4, 1) ) * 8 +
                    VALUE( MID(CPF__c, 5, 1) ) * 7 +
                    VALUE( MID(CPF__c, 6, 1) ) * 6 +
                    VALUE( MID(CPF__c, 7, 1) ) * 5 +
                    VALUE( MID(CPF__c, 8, 1) ) * 4 +
                    VALUE( MID(CPF__c, 9, 1) ) * 3 +
                    VALUE( MID(CPF__c, 10, 1) )* 2
                    ), 11) == VALUE(MID(CPF__c, 11, 1)),
                    AND(MOD((
                            VALUE( MID(CPF__c, 1, 1) )    * 11 +
                            VALUE( MID(CPF__c, 2, 1) ) * 10 +
                            VALUE( MID(CPF__c, 3, 1) ) * 9 +
                            VALUE( MID(CPF__c, 4, 1) ) * 8 +
                            VALUE( MID(CPF__c, 5, 1) ) * 7 +
                            VALUE( MID(CPF__c, 6, 1) ) * 6 +
                            VALUE( MID(CPF__c, 7, 1) ) * 5 +
                            VALUE( MID(CPF__c, 8, 1) ) * 4 +
                            VALUE( MID(CPF__c, 9, 1) ) * 3 +
                            VALUE( MID(CPF__c, 10, 1) )* 2
                        ), 11) &lt; 2, 
                        VALUE(MID(CPF__c, 11, 1)) = 0
                    )
                ), 
                true,
                false
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF Test</label>
    <type>Checkbox</type>
</CustomField>