force-app/main/default/objects/Contact/fields/CPFValidation__c.field-meta.xml
<CustomField>
    <fullName>CPFValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPF Validation</label>
    <type>Checkbox</type>
</CustomField>